# 5869900-sands-python

./: README.md  operations.py  pyproject.toml  pytest.py  run.py  signals.py  test.py
AESB2122_project/: operations.py  run.py  signals.py
AESB2122_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
