[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AESB2122_project"
version = "0.1.0"
description = "A package for creating, analyzing and processing signals"
authors = [ {name = "Winston Loo", email = "hbwinstonloo@gmail.com"},]
dependencies = ["numpy", "scipy", "matplotlib", "pandas"]